# cdpr_controller

./: CMakeLists.txt  README.md  package.xml
MotorController/include/: MotorController.h
MotorController/src/: MotorController.cpp
cdpr_controller/: CMakeLists.txt
cdpr_controller/MotorController/: CMakeLists.txt
cdpr_controller/TrajectoryGenerator/: CMakeLists.txt
cdpr_controller/src/: MotorNode.cpp
cdpr_controller/src/MotorController/include/: MotorController.h
cdpr_controller/src/RobotModel/src/: RobotModel.cpp
cdpr_controller/src/TrajectoryGenerator/: CMakeLists.txt
install/: local_setup.sh  setup.sh
install/CDPR_controller/share/CDPR_controller/: package.bash  package.zsh
install/cdpr_controller/share/cdpr_controller/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/robot_control_pubsub/lib/robot_control_pubsub/: motorNode  robotNode  userNode
install/robot_control_pubsub/share/RobotModelModule/: local_setup.dsv  local_setup.sh  package.dsv  package.xml
install/robot_control_pubsub/share/RobotModelModule/cmake/: RobotModelModuleConfig.cmake
install/robot_control_pubsub/share/robot_control_pubsub/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
log/: latest_build
src/: MotorNode.cpp  RobotNode.cpp  UserNode.cpp  epos_node.cpp  inverse_kinematics.cpp  motor_node.cpp  user_node.cpp
src/MotorController/: CMakeLists.txt
src/MotorController/include/: MotorController.h
src/MotorController/src/: MotorController.cpp
src/RobotModel/: CMakeLists.txt
src/RobotModel/include/: RobotModel.h
src/RobotModel/src/: RobotModel.cpp
src/TrajectoryGenerator/include/: TrajectoryGenerator.h
src/TrajectoryGenerator/src/: TrajectoryGenerator.cpp
src/cdpr_controller/: package.xml
src/cdpr_controller/MotorController/src/: MotorController.cpp
src/cdpr_controller/RobotModel/: CMakeLists.txt
src/cdpr_controller/RobotModel/include/: RobotModel.h
src/cdpr_controller/RobotModel/src/: RobotModel.cpp
src/cdpr_controller/TrajectoryGenerator/src/: TrajectoryGenerator.cpp
src/cdpr_controller/src/: MotorNode.cpp  RobotNode.cpp  UserNode.cpp
src/install/: local_setup.sh  setup.sh
src/log/: latest_build
